--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -43,6 +43,7 @@
 	"hot": {
 		"guessYouLike": "guess you like",
 		"loginSeePrice": "Check prices after login",
+		"price-sell-advise": "Suggested sales price",
 		"price-wholesale": "Wholesale price",
 		"recommend": "Popular recommendation"
 	},
