--- a/assets/i18n/ko.json
+++ b/assets/i18n/ko.json
@@ -43,6 +43,7 @@
 	"hot": {
 		"guessYouLike": "당신이 좋아하는 것 같아",
 		"loginSeePrice": "로그인 후 가격 확인",
+		"price-sell-advise": "권장 판매 가격",
 		"price-wholesale": "도매가",
 		"recommend": "인기 추천"
 	},
