--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -43,6 +43,7 @@
 	"hot": {
 		"guessYouLike": "Đoán xem bạn thích gì",
 		"loginSeePrice": "Kiểm tra giá sau khi đăng nhập",
+		"price-sell-advise": "Giá bán đề xuất",
 		"price-wholesale": "Giá sỉ",
 		"recommend": "Gợi ý hôm nay"
 	},
