--- a/assets/i18n/zh-cmn-Hans.json
+++ b/assets/i18n/zh-cmn-Hans.json
@@ -43,6 +43,7 @@
 	"hot": {
 		"guessYouLike": "猜你喜欢",
 		"loginSeePrice": "登陆后查看价格",
+		"price-sell-advise": "建议销售价",
 		"price-wholesale": "批发价",
 		"recommend": "热门推荐"
 	},
