--- a/assets/i18n/zh-cmn-Hant.json
+++ b/assets/i18n/zh-cmn-Hant.json
@@ -43,6 +43,7 @@
 	"hot": {
 		"guessYouLike": "猜你喜歡",
 		"loginSeePrice": "登陸後查看價格",
+		"price-sell-advise": "建議銷售價",
 		"price-wholesale": "批發價",
 		"recommend": "熱門推薦"
 	},
