--- a/assets/i18n/ko.json
+++ b/assets/i18n/ko.json
@@ -19,6 +19,9 @@
 		"addShippingAddress": "배송지 주소 추가",
 		"shoppingAddress": "배송지 주소"
 	},
+	"admin-category-list": {
+		"title": "제품 카테고리 목록"
+	},
 	"cart": {
 		"color": "색깔",
 		"nothing": "제품을 추가하십시오 ...",
@@ -102,6 +105,7 @@
 	},
 	"personal": {
 		"about": "이 사이트에 대하여",
+		"admin": "",
 		"all_order": "모든 주문",
 		"login": "로그인",
 		"logout": "로그 아웃",
@@ -126,6 +130,7 @@
 		"mobile": "전화",
 		"nickName": "닉네임",
 		"password": "비밀번호",
+		"passwordConfirm": "비밀번호 확인",
 		"register": "등록",
 		"username": "아이디"
 	},
