--- a/assets/i18n/zh-cmn-Hans.json
+++ b/assets/i18n/zh-cmn-Hans.json
@@ -19,6 +19,9 @@
 		"addShippingAddress": "添加送货地址",
 		"shoppingAddress": "送货地址"
 	},
+	"admin-category-list": {
+		"title": "商品类别列表"
+	},
 	"cart": {
 		"color": "颜色",
 		"nothing": "请添加商品...",
@@ -102,6 +105,7 @@
 	},
 	"personal": {
 		"about": "关于本站",
+		"admin": "后台",
 		"all_order": "所有订单",
 		"login": "登录",
 		"logout": "登出",
@@ -126,6 +130,7 @@
 		"mobile": "电话",
 		"nickName": "昵称",
 		"password": "密码",
+		"passwordConfirm": "密码确认",
 		"register": "注册",
 		"username": "用户名"
 	},
