--- a/assets/i18n/zh-cmn-Hant.json
+++ b/assets/i18n/zh-cmn-Hant.json
@@ -19,6 +19,9 @@
 		"addShippingAddress": "添加送貨地址",
 		"shoppingAddress": "送貨地址"
 	},
+	"admin-category-list": {
+		"title": "商品類別列表"
+	},
 	"cart": {
 		"color": "顏色",
 		"nothing": "請添加商品...",
@@ -102,6 +105,7 @@
 	},
 	"personal": {
 		"about": "關於本站",
+		"admin": "",
 		"all_order": "所有訂單",
 		"login": "登錄",
 		"logout": "登出",
@@ -126,6 +130,7 @@
 		"mobile": "電話",
 		"nickName": "暱稱",
 		"password": "密碼",
+		"passwordConfirm": "密碼確認",
 		"register": "註冊",
 		"username": "用戶名"
 	},
